# openspodes

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  README_CN.md
.github/workflows/: ci.yml
build-bench/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  openspodes_bench
docs/: ARCHITECTURE.md  BENCHMARKS.md  DLMS_COSEM_conformance_tests.md  HAL.md  HANDOFF.md  SECURITY.md  TROUBLESHOOTING.md  golden_vectors.txt
docs/pages/: index.html
examples/: linux_demo.c  linux_hal.c  linux_hal.h  loopback_cli.c  push_listener.c  serial_client.c  serial_server.c  serial_transport.c  serial_transport.h  spodus_demo.c  tcp_client.c  tcp_server.c  tcp_socket.c  tcp_socket.h
scripts/: coverage_report.py
src/: data_hal.c  data_hal.h  openspodes.h
src/client/: client.c  client.h
src/codec/: codec.c  codec.h  ic_serialize.c  ic_serialize.h  serialize.c  serialize.h  structures.h  types.h
src/ic/: activity_calendar.c  activity_calendar.h  arbitrator.c  arbitrator.h  association_ln.c  association_ln.h  clock.c  clock.h  compact_data.c  compact_data.h  data.c  data.h  data_protection.c  data_protection.h  demand_register.c  demand_register.h  disconnect_control.c  disconnect_control.h  extended_register.c  extended_register.h  gprs_modem.c  gprs_modem.h  gsm_diagnostic.c  gsm_diagnostic.h  ic_common.c  ic_common.h  iec_hdlc_setup.c  iec_hdlc_setup.h  iec_local_port_setup.c  iec_local_port_setup.h  image_transfer.c  image_transfer.h  ipv4_setup.c  ipv4_setup.h  ipv6_setup.c  ipv6_setup.h  limiter.c  limiter.h  mac_address.c  mac_address.h  (+44 more)
src/security/: general_ciphering.c  general_ciphering.h  gost3410.c  gost_crypto.h  hls_high.c  kuznyechik.c  kuznyechik_tables.h  security.c  security.h  streebog_wrap.c
src/security/streebog/: gost3411-2012-config.h  gost3411-2012-core.c  gost3411-2012-core.h
src/server/: dispatcher.c  dispatcher.h  server.c  server.h
src/service/: gbt.c  gbt.h  initiate.c  initiate.h  notification.c  notification.h  push_delivery.c  push_delivery.h  service.c  service.h  xdms.c  xdms_selective.c  xdms_selective.h
src/spodus/: access_policy.c  access_policy.h  channel_list.c  channel_list.h  concentrator.c  concentrator.h  direct_channel.c  direct_channel.h  discovered.c  discovered.h  meter_registry.c  meter_registry.h  spodus_data.h  spodus_obis.h  spodus_server.c  tasks.c  tasks.h
src/transport/: hdlc_session.c  hdlc_session.h  transport.c  transport.h
tests/: mock_crypto.c  mock_crypto.h  mock_transport.c  mock_transport.h  real_crypto.c  test_aarq_direct.c  test_benchmark_comparison.c  test_ber_minimal.c  test_codec_golden.c  test_core.c  test_data_hal.c  test_data_hal.h  test_data_hal_db.c  test_debug_flow.c  test_errors.c  test_gost_crypto.c  test_hdlc_session.c  test_hdlc_wrapper_framing.c  test_ic_smoke.c  test_integration.c  test_performance.c  test_phase0.c  test_phase1.c  test_phase2.c  test_security_glo.c  test_spodus_concentrator.c  test_thread_safety.c  test_types.c  test_yb_ats_al_appl_data.c  test_yb_ats_al_appl_open.c  test_yb_ats_al_appl_rel.c  test_yb_ats_al_appl_sec.c  test_yb_ats_al_cosem_objs.c  test_yb_ats_al_symsec_0.c  test_yb_ats_dl_hdlc_address.c  test_yb_ats_dl_hdlc_frame.c  test_yb_ats_dl_hdlc_info.c  test_yb_ats_dl_hdlc_ndm2nrm.c  test_yb_ats_dl_hdlc_ndmop.c  test_yellowbook_appl.c  (+4 more)
tests/fixtures/: ic_golden_vectors.h  ic_spodes_fixtures.c  ic_spodes_fixtures.h
tools/: gen_ic_golden_vectors.c
